apps/notes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden
  namespace: notes
  labels:
    app: garden
spec:
  selector:
    app: garden
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
